--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,9 +13,11 @@
 
 html,
 body {
-  min-height: 100vh;
+  min-height: 100svh;
   max-width: 100vw;
   overflow-x: hidden;
+
+  font-family: var(--font-inter);
 }
 
 body {
