feature: about me section and layout adjustments

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,7 +1,18 @@
-.text-primary {
-  @apply text-black dark:text-white;
+@tailwind base;
+@tailwind components; /* Add this line */
+
+@layer components {
+  .text-primary {
+    @apply text-black dark:text-white;
+  }
+
+  .text-secondary {
+    @apply text-gray-800 dark:text-gray-200;
+  }
 }
 
-.text-secondary {
-  @apply text-gray-800 dark:text-gray-200;
+@layer components {
+  .text-section-title {
+    @apply text-primary font-extrabold text-5xl;
+  }
 }
