feature: finished experience section

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -3,15 +3,15 @@
 
 @layer components {
   .text-primary {
-    @apply text-black dark:text-white;
+    @apply text-neutral-950 dark:text-neutral-50;
   }
 
   .text-secondary {
-    @apply text-gray-800 dark:text-gray-200;
+    @apply text-neutral-800 dark:text-neutral-200;
   }
 
   .text-tertiary {
-    @apply text-gray-600 dark:text-gray-400;
+    @apply text-neutral-600 dark:text-neutral-400;
   }
 }
 
